--- a/eng-security/pom.xml
+++ b/eng-security/pom.xml
@@ -53,5 +53,15 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+        <dependency>
+            <groupId>org.engdream</groupId>
+            <artifactId>eng-service</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+		<dependency>
+			<groupId>org.engdream</groupId>
+			<artifactId>eng-service</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
