--- a/eng-security/pom.xml
+++ b/eng-security/pom.xml
@@ -59,9 +59,20 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 		<dependency>
-			<groupId>org.engdream</groupId>
-			<artifactId>eng-service</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session</artifactId>
+			<version>1.3.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+			<version>1.3.0.RELEASE</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
+			<groupId>biz.paluch.redis</groupId>
+			<artifactId>lettuce</artifactId>
+			<version>3.5.0.Final</version>
 		</dependency>
 	</dependencies>
 </project>
