--- a/eng-web/src/main/webapp/WEB-INF/web.xml
+++ b/eng-web/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
             classpath:spring-config-common.xml,
             classpath:spring-config-dao.xml,
             classpath:spring-config-service.xml,
-            classpath:spring-config-shiro.xml
+            classpath:spring-config-security.xml
         </param-value>
     </context-param>
     <listener>
@@ -47,7 +47,14 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <!-- 设置servlet编码结束 -->
-
+    <filter>
+        <filter-name>springSessionRepositoryFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSessionRepositoryFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <!-- shiro 安全过滤器 -->
     <!-- The filter-name matches name of a 'shiroFilter' bean inside applicationContext.xml -->
     <filter>
